<resources>
    <string name="app_name">Inventory</string>
    <string name="new_product">Add a new product</string>
    <string name="empty_product_list">No Product Available. Please tap on the plus sign above to add a product.</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="informations">product information</string>
    <string name="details">Product Details</string>
    <string name="add_product">Add Product</string>
    <string name="sell">sell</string>
    <string name="refresh">refresh data</string>
    <string name="product_name">Product name</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_price">Enter price</string>
    <string name="price">price</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="supplier_name">Supplier name</string>
    <string name="enter_supplier_name">Enter supplier name</string>
    <string name="supplier_mail">Supplier Email</string>
    <string name="enter_supplier_mail">Enter the email of the supplier</string>
    <string name="product_image">Product image</string>
    <string name="add_photo">Add photo</string>
    <string name="create_product">Create product</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_an_image">Add an image!</string>
    <string name="empty_text_view_error">You have fill out every field to continue.</string>
    <string name="error_bad_price_entered">Please enter the price like this 45.22</string>
    <string name="error_bad_mail_address_entered">Please enter an e-mail address like mail@example.com</string>
    <string name="info_database_add">Added to database: </string>
    <string name="dollar_sign">"$ "</string>
    <string name="qty">qty.</string>
    <string name="sold">" sold!"</string>
    <string name="error_cant_get_fragment">Can\'t get the fragment manager with this activity</string>
    <string name="bad_sell_quantity_error">You try to sell more than you have. Rejected, sorry!</string>
    <string name="product_selling_done">Product selling done</string>
    <string name="received">" received."</string>
    <string name="order_of">"Order of "</string>
    <string name="deleted">" deleted."</string>
    <string name="delete">delete</string>
    <string name="dialog_delete_message">Deleted products can not be restored.</string>
    <string name="dialog_delete_title">Deletion Alert!</string>
</resources>
