<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/product_image"/>

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/product_detail_image_height"
            android:alpha="0.9"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

        <Button
            android:id="@+id/add_image_button"
            style="@style/inventory_button"
            android:layout_marginTop="@dimen/default_dim"
            android:text="@string/add_photo"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/product_name"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_name"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/price"/>

        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_price"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"/>

        <EditText
            android:id="@+id/quantity_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_quantity"
            android:inputType="number"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/supplier_name"/>

        <EditText
            android:id="@+id/supplier_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_supplier_name"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/supplier_mail"/>

        <EditText
            android:id="@+id/supplier_mail_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_supplier_mail"
            android:inputType="textEmailAddress"/>
    </LinearLayout>
</ScrollView>